--- a/react-kiso-statins1/src/GetThreadList.css
+++ b/react-kiso-statins1/src/GetThreadList.css
@@ -1,3 +1,15 @@
 ul {
     font-size: 20px;
 }
+
+div {
+    position: fixed; /* ウィンドウを基準に画面に固定 */
+  top: 0; /* 上下の固定位置を上から0pxにする */
+  left: 0;
+  width: 100%;
+  padding-top: 140px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
